--- a/app/index.html
+++ b/app/index.html
@@ -6,20 +6,9 @@
   <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
-  <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-  </ul>
 
-  <div ng-view></div>
+  Nothing here yet!
 
-  <div>Angular seed app: v<span app-version></span></div>
-
-  <script src="lib/angular/angular.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/services.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/filters.js"></script>
-  <script src="js/directives.js"></script>
+  <script src="lib/angular/angular.js" ng:autobind></script>
 </body>
 </html>
