--- a/app/index.html
+++ b/app/index.html
@@ -2,10 +2,27 @@
 <html xmlns:ng="http://angularjs.org/">
 <head>
   <meta charset="utf-8">
-  <title>my angular app</title>
+  <title>Google Phone Gallery</title>
   <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body style="display:none" ng:show="true">
+
+
+  <ul>
+    <li>
+      <span>Nexus S<span>
+      <p>
+        Fast just got faster with Nexus S. A pure Google experience, Nexus S is the first phone to
+        run Gingerbread (Android 2.3), the fastest version of Android yet.
+      </p>
+    </li>
+    <li>
+      <span>DROID™ 2 Global by Motorola<span>
+      <p>
+        The first smartphone with a 1.2 GHz processor and global capabilities.
+      </p>
+    </li>
+  </ul>
 
 
   <script src="lib/angular/angular.js" ng:autobind></script>
