--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,10 @@
 <body style="display:none" ng:show="true" ng:controller="PhoneListCtrl">
 
 
-  <ul>
-    <li ng:repeat="phone in phones">
+  Fulltext Search: <input name="query"/>
+
+  <ul class="phones">
+    <li ng:repeat="phone in phones.$filter(query)">
       {{phone.name}}
       <p>{{phone.snippet}}</p>
     </li>
