--- a/app/index.html
+++ b/app/index.html
@@ -8,10 +8,22 @@
 <body style="display:none" ng:show="true" ng:controller="PhoneListCtrl">
 
 
-  Fulltext Search: <input name="query"/>
+  <ul class="predicates">
+    <li>
+      Sort by:
+      <ul>
+        <li><a href ng:click="orderProp = 'age'">Newest</a></li>
+        <li><a href ng:click="orderProp = 'name'">Alphabetical</a></li>
+      </ul>
+    </li>
+    <li>
+      Search: <input type="text" name="query"/>
+    </li>
+  </ul>
+
 
   <ul class="phones">
-    <li ng:repeat="phone in phones.$filter(query)">
+    <li ng:repeat="phone in phones.$filter(query).$orderBy(orderProp)">
       <a href="#/phones/{{phone.id}}">{{phone.name}}</a>
       <a href="#/phones/{{phone.id}}" class="thumb"><img ng:src="{{phone.imageUrl}}"/></a>
       <p>{{phone.snippet}}</p>
