--- a/app/index.html
+++ b/app/index.html
@@ -5,31 +5,9 @@
   <title>Google Phone Gallery</title>
   <link rel="stylesheet" href="css/app.css"/>
 </head>
-<body style="display:none" ng:show="true" ng:controller="PhoneListCtrl">
+<body style="display:none" ng:show="true" ng:controller="PhonesCtrl">
 
-
-  <ul class="predicates">
-    <li>
-      Sort by:
-      <ul>
-        <li><a href ng:click="orderProp = 'age'">Newest</a></li>
-        <li><a href ng:click="orderProp = 'name'">Alphabetical</a></li>
-      </ul>
-    </li>
-    <li>
-      Search: <input type="text" name="query"/>
-    </li>
-  </ul>
-
-
-  <ul class="phones">
-    <li ng:repeat="phone in phones.$filter(query).$orderBy(orderProp)">
-      <a href="#/phones/{{phone.id}}">{{phone.name}}</a>
-      <a href="#/phones/{{phone.id}}" class="thumb"><img ng:src="{{phone.imageUrl}}"/></a>
-      <p>{{phone.snippet}}</p>
-    </li>
-  </ul>
-
+  <ng:view></ng:view>
 
   <script src="lib/angular/angular.js" ng:autobind></script>
   <script src="js/services.js"></script>
