--- a/app/index.html
+++ b/app/index.html
@@ -1,17 +1,18 @@
 <!doctype html>
-<html ng-app="myApp">
+<html ng-app="phonecatApp">
 <head>
   <meta charset="utf-8">
   <title>Google Phone Gallery</title>
+  <base href="/app/index.html">
   <link rel="stylesheet" href="css/app.css"/>
-</head>
-<body ng:controller="PhoneCatCtrl">
-
-  <ng:view></ng:view>
-
-  <script src="lib/angular/angular.js" ng:autobind></script>
+  <script src="lib/angular/angular.js"></script>
+  <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/services.js"></script>
+  <script src="js/directives.js"></script>
+</head>
+<body>
+  <article ng-view></article>
 </body>
 </html>
