--- a/app/index.html
+++ b/app/index.html
@@ -11,13 +11,13 @@
 
   <ul>
     <li>
-      <span>Nexus S<span>
+      <span>Nexus S</span>
       <p>
         Fast just got faster with Nexus S.
       </p>
     </li>
     <li>
-      <span>Motorola XOOM™ with Wi-Fi<span>
+      <span>Motorola XOOM™ with Wi-Fi</span>
       <p>
         The Next, Next Generation tablet.
       </p>
