--- a/app/index.html
+++ b/app/index.html
@@ -1,20 +1,15 @@
 <!doctype html>
-<html lang="en" ng-app="phonecat">
+<html lang="en" ng-app>
 <head>
   <meta charset="utf-8">
-  <title>Google Phone Gallery</title>
+  <title>My HTML File</title>
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <script src="lib/angular/angular.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/filters.js"></script>
-  <script src="js/services.js"></script>
-  <script src="lib/angular/angular-resource.js"></script>
 </head>
 <body>
 
-  <div ng-view></div>
+  <p>Nothing here {{'yet' + '!'}}</p>
 
 </body>
 </html>
