--- a/app/index.html
+++ b/app/index.html
@@ -1,44 +1,28 @@
 <!doctype html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="phonecat">
 <head>
   <meta charset="utf-8">
   <title>Google Phone Gallery</title>
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <script src="lib/angular/angular.js"></script>
+  <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
 </head>
-<body ng-controller="PhoneListCtrl">
-
-  <div class="container-fluid">
-    <div class="row-fluid">
-		<div class="span3 offset1">
-		<!--Sidebar content-->
-			<section class="well">
-				<label class="label">Search : </label>
-				<input ng-model="query" type="text" class="search-query span12" placeholder="Search for phone ">
-				</p>
-				<label class="label">Sort by : </label>
-				<select ng-model="orderProp" type="select" class="select span12">
-					<option value="name">Alphabetical</option>
-					<option value="age">Newest</option>
-				</select>
-			</section>
-		</div>	
-      <div class="span7">
-        <!--Body content-->
-
-        <ul class="phones">
-          <li ng-repeat="phone in phones | filter:query | orderBy:orderProp" class="thumbnail">
-            <a href="#/phones/{{phone.id}}" class="thumb"><img ng-src="{{phone.imageUrl}}"></a>
-            <a href="#/phones/{{phone.id}}">{{phone.name}}</a>
-            <p>{{phone.snippet}}</p>
-          </li>
-        </ul>
-
-      </div>
-    </div>
-  </div>
+<body>
+  <header class="header">
+	<nav class="navbar navbar-fixed-top">
+		<nav class="navbar-inner">
+			<div class="container">
+				<a class="brand" href="#/">
+					<img class="AngularJS-small" src="img/AngularJS-small.png"/>
+					<span class="large">Phone Catalogue</span>
+				</a>
+			</div>
+		</nav>
+	</nav>
+  </header>
+  <div ng-view></div>
 
 </body>
 </html>
