using angular-resource.js from the 1.0.6 codebase

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/services.js"></script>
-  <script src="lib/angular/angular-resource.js"></script>
+  <script src="lib/angular/1.0.6/angular-resource.js"></script>
 </head>
 <body>
 
