removing stuff from step-13

--- a/app/using_components.html
+++ b/app/using_components.html
@@ -13,13 +13,13 @@
 <body>
 
 
-  <phoneimages phone="phone1" onimagechange="changedimage1"></phoneimages>
+  <phoneimages phone="phone1"></phoneimages>
 
   <br><br><br><br><br><br><br><br><br><br>
   Who bought this, also bought
   <br><br><br>
 
-  <phoneimages phone="phone2" onimagechange="changedimage2"></phoneimages>
+  <phoneimages phone="phone2"></phoneimages>
 
 </body>
 </html>
