--- a/app/index-async.html
+++ b/app/index-async.html
@@ -2,20 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <title>Google Phone Gallery</title>
   <style>
     [ng-cloak] {
       display: none;
     }
   </style>
+  <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/animations.css">
   <script>
-    // include angular loader, which allows the files to load in any order
-    /*
-     AngularJS v1.0.8
-     (c) 2010-2012 Google, Inc. http://angularjs.org
-     License: MIT
-    */
-    (function(i){'use strict';function d(c,b,e){return c[b]||(c[b]=e())}return d(d(i,"angular",Object),"module",function(){var c={};return function(b,e,f){e&&c.hasOwnProperty(b)&&(c[b]=null);return d(c,b,function(){function a(a,b,d){return function(){c[d||"push"]([a,b,arguments]);return g}}if(!e)throw Error("No module: "+b);var c=[],d=[],h=a("$injector","invoke"),g={_invokeQueue:c,_runBlocks:d,requires:e,name:b,provider:a("$provide","provider"),factory:a("$provide","factory"),service:a("$provide","service"),
-    value:a("$provide","value"),constant:a("$provide","constant","unshift"),filter:a("$filterProvider","register"),controller:a("$controllerProvider","register"),directive:a("$compileProvider","directive"),config:h,run:function(a){d.push(a);return this}};f&&h(f);return g})}})})(window);
+/*
+ AngularJS v1.2.1-cb50640
+ (c) 2010-2012 Google, Inc. http://angularjs.org
+ License: MIT
+*/
+(function(e){'use strict';function d(a){return function(){var c=arguments[0],b,c="["+(a?a+":":"")+c+"] http://errors.angularjs.org/undefined/"+(a?a+"/":"")+c;for(b=1;b<arguments.length;b++)c=c+(1==b?"?":"&")+"p"+(b-1)+"="+encodeURIComponent("function"==typeof arguments[b]?arguments[b].toString().replace(/ \{[\s\S]*$/,""):"undefined"==typeof arguments[b]?"undefined":"string"!=typeof arguments[b]?JSON.stringify(arguments[b]):arguments[b]);return Error(c)}}(function(a){a=a.angular||(a.angular={});a.$$minErr=
+a.$$minErr||d;return a.module||(a.module=function(){var a={};return function(b,f,g){var e=d("$injector"),l=d("ng");if("hasOwnProperty"===b)throw l("badname","module");f&&a.hasOwnProperty(b)&&(a[b]=null);return a[b]||(a[b]=function(){function a(b,d,e){return function(){c[e||"push"]([b,d,arguments]);return h}}if(!f)throw e("nomod",b);var c=[],d=[],k=a("$injector","invoke"),h={_invokeQueue:c,_runBlocks:d,requires:f,name:b,provider:a("$provide","provider"),factory:a("$provide","factory"),service:a("$provide",
+"service"),value:a("$provide","value"),constant:a("$provide","constant","unshift"),animation:a("$animateProvider","register"),filter:a("$filterProvider","register"),controller:a("$controllerProvider","register"),directive:a("$compileProvider","directive"),config:k,run:function(a){d.push(a);return this}};g&&k(g);return h}())}}())})(e)})(window);
 
 
     // include a third-party async loader library
@@ -31,28 +35,25 @@
     // load all of the dependencies asynchronously.
     $script([
       'lib/angular/angular.js',
+      'lib/angular/angular-animate.js',
+      'lib/angular/angular-resource.js',
+      'lib/angular/angular-route.js',
       'js/app.js',
       'js/services.js',
       'js/controllers.js',
       'js/filters.js',
-      'js/directives.js'
+      'js/directives.js',
+      'js/animations.js'
     ], function() {
       // when all is done, execute bootstrap angular application
-      angular.bootstrap(document, ['myApp']);
-    });
+      debugger;
+      angular.bootstrap(document, ['phonecatApp']);
+    })
   </script>
-  <title>My AngularJS App</title>
-  <link rel="stylesheet" href="css/app.css">
 </head>
 <body ng-cloak>
-  <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-  </ul>
-
-  <div ng-view></div>
-
-  <div>Angular seed app: v<span app-version></span></div>
-
+  <div class="view-container">
+    <div ng-view class="view-frame"></div>
+  </div>
 </body>
 </html>
