Adds a class="span12" to the input field so it is formated nicely in the grid.
- either class="span12" or class="span" is needed to keep the inputfield from overlapping with the phones-table.

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
       <div class="span2">
         <!--Sidebar content-->
 
-        Search: <input ng-model="query">
+        Search: <input ng-model="query" class="span12">
 
       </div>
       <div class="span10">
