--- a/step-10/app/index.html
+++ b/step-10/app/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Google Phone Gallery</title>
+  <link rel="stylesheet" href="../../../bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="css/app.css">
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <script src="lib/angular/angular.js"></script>
-  <script src="lib/angular/angular-route.js"></script>
+  <script src="../../../bower_components/angular/angular.js"></script>
+  <script src="../../../bower_components/angular-route/angular-route.js"></script>
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
