--- a/step-5/app/index.html
+++ b/step-5/app/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Google Phone Gallery</title>
+  <link rel="stylesheet" href="../../../bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="css/app.css">
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <script src="lib/angular/angular.js"></script>
+  <script src="../../../bower_components/angular/angular.js"></script>
   <script src="js/controllers.js"></script>
 </head>
 <body ng-controller="PhoneListCtrl">
@@ -28,7 +28,7 @@
 
         <ul class="phones">
           <li ng-repeat="phone in phones | filter:query | orderBy:orderProp">
-            {{phone.name}}
+            <span>{{phone.name}}</span>
             <p>{{phone.snippet}}</p>
           </li>
         </ul>
