--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
 </head>
 <body>
 <p>Total number of phones: 2</p>
+  <p>Total number of phones: 2</p>
   <div class="view-container">
     <div ng-view class="view-frame"></div>
   </div>
