--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,7 @@
 <body>
  <p>1 + 2 = {{ 1 + 2 }}</p>
    <p>Total number of phones: 2</p>
+     <p>Hello, {{name}}!</p>
   <div class="view-container">
     <div ng-view class="view-frame"></div>
   </div>
