--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
   <script src="js/services.js"></script>
 </head>
 <body>
-
+ <p>Total number of phones: 2</p>
   <div class="view-container">
     <div ng-view class="view-frame"></div>
   </div>
