--- a/app/index.html
+++ b/app/index.html
@@ -10,11 +10,12 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/filters.js"></script>
 </head>
 
 <body>
 
-<div ng-view></div>
+    <div ng-view></div>
 
 </body>
 
