--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
 
       </div>
       <div class="col-md-10">
+      <div>Откуда Git узнает, на какой ветке вы находитесь в данный момент? Он хранит специальный указатель</div>
         <!--Body content-->
 
         <ul class="phones">
