chore(structure): refactor to Angular style guide conventions
Reorganize application code to be more closely aligned
with the Angular Style Guide.

This is for the final version of the app and hasn’t been
factored into steps or into the tutorial text.

1. Folders-by-feature structure: /core, /phone_list, /phone_detail
   https://github.com/johnpapa/angular-styleguide#style-y152
2. App root module depends on feature modules and core module.
   https://github.com/johnpapa/angular-styleguide#style-y165
3. One component per file. Each controller/factory/filter in its own file.
   https://github.com/johnpapa/angular-styleguide#style-y001
4. Feature+type file naming convention.
   https://github.com/johnpapa/angular-styleguide#style-y120
5. Module files, *.module.js for each module.
   https://github.com/johnpapa/angular-styleguide#style-y127
6. Component registration with getters
   https://github.com/johnpapa/angular-styleguide#style-y022
7. Named functions
   https://github.com/johnpapa/angular-styleguide#style-y024
8. Manual injection
   https://github.com/johnpapa/angular-styleguide#style-y091
9. controllerAs syntax
   https://github.com/johnpapa/angular-styleguide#style-y030

Related to angular/angular.js#13312

--- a/app/js/phone_list/phone_list.html
+++ b/app/js/phone_list/phone_list.html
@@ -3,9 +3,9 @@
     <div class="col-md-2">
       <!--Sidebar content-->
 
-      Search: <input ng-model="query">
+      Search: <input ng-model="vm.query">
       Sort by:
-      <select ng-model="orderProp">
+      <select ng-model="vm.orderProp">
         <option value="name">Alphabetical</option>
         <option value="age">Newest</option>
       </select>
@@ -15,7 +15,7 @@
       <!--Body content-->
 
       <ul class="phones">
-        <li ng-repeat="phone in phones | filter:query | orderBy:orderProp"
+        <li ng-repeat="phone in vm.phones | filter:vm.query | orderBy:vm.orderProp"
             class="thumbnail phone-listing">
           <a href="#/phones/{{phone.id}}" class="thumb"><img ng-src="{{phone.imageUrl}}"></a>
           <a href="#/phones/{{phone.id}}">{{phone.name}}</a>
