chore(structure): turn controllers into component directives

--- a/app/index.html
+++ b/app/index.html
@@ -18,8 +18,10 @@
   <script src="js/core/phone.factory.js"></script>
   <script src="js/phone_detail/phone_detail.module.js"></script>
   <script src="js/phone_detail/phone.animation.js"></script>
+  <script src="js/phone_detail/phone_detail.component.js"></script>
   <script src="js/phone_detail/phone_detail.controller.js"></script>
   <script src="js/phone_list/phone_list.module.js"></script>
+  <script src="js/phone_list/phone_list.component.js"></script>
   <script src="js/phone_list/phone_list.controller.js"></script>
 </head>
 <body>
