--- a/app/js/phone_detail/phone_detail.html
+++ b/app/js/phone_detail/phone_detail.html
@@ -1,17 +1,17 @@
 <div class="phone-images">
   <img ng-src="{{img}}"
        class="phone"
-       ng-repeat="img in vm.phone.images"
-       ng-class="{active: vm.mainImageUrl==img}">
+       ng-repeat="img in phoneDetail.phone.images"
+       ng-class="{active: phoneDetail.mainImageUrl==img}">
 </div>
 
-<h1>{{vm.phone.name}}</h1>
+<h1>{{phoneDetail.phone.name}}</h1>
 
-<p>{{vm.phone.description}}</p>
+<p>{{phoneDetail.phone.description}}</p>
 
 <ul class="phone-thumbs">
-  <li ng-repeat="img in vm.phone.images">
-    <img ng-src="{{img}}" ng-click="vm.setImage(img)">
+  <li ng-repeat="img in phoneDetail.phone.images">
+    <img ng-src="{{img}}" ng-click="phoneDetail.setImage(img)">
   </li>
 </ul>
 
@@ -20,99 +20,99 @@
     <span>Availability and Networks</span>
     <dl>
       <dt>Availability</dt>
-      <dd ng-repeat="availability in vm.phone.availability">{{availability}}</dd>
+      <dd ng-repeat="availability in phoneDetail.phone.availability">{{availability}}</dd>
     </dl>
   </li>
   <li>
     <span>Battery</span>
     <dl>
       <dt>Type</dt>
-      <dd>{{vm.phone.battery.type}}</dd>
+      <dd>{{phoneDetail.phone.battery.type}}</dd>
       <dt>Talk Time</dt>
-      <dd>{{vm.phone.battery.talkTime}}</dd>
+      <dd>{{phoneDetail.phone.battery.talkTime}}</dd>
       <dt>Standby time (max)</dt>
-      <dd>{{vm.phone.battery.standbyTime}}</dd>
+      <dd>{{phoneDetail.phone.battery.standbyTime}}</dd>
     </dl>
   </li>
   <li>
     <span>Storage and Memory</span>
     <dl>
       <dt>RAM</dt>
-      <dd>{{vm.phone.storage.ram}}</dd>
+      <dd>{{phoneDetail.phone.storage.ram}}</dd>
       <dt>Internal Storage</dt>
-      <dd>{{vm.phone.storage.flash}}</dd>
+      <dd>{{phoneDetail.phone.storage.flash}}</dd>
     </dl>
   </li>
   <li>
     <span>Connectivity</span>
     <dl>
       <dt>Network Support</dt>
-      <dd>{{vm.phone.connectivity.cell}}</dd>
+      <dd>{{phoneDetail.phone.connectivity.cell}}</dd>
       <dt>WiFi</dt>
-      <dd>{{vm.phone.connectivity.wifi}}</dd>
+      <dd>{{phoneDetail.phone.connectivity.wifi}}</dd>
       <dt>Bluetooth</dt>
-      <dd>{{vm.phone.connectivity.bluetooth}}</dd>
+      <dd>{{phoneDetail.phone.connectivity.bluetooth}}</dd>
       <dt>Infrared</dt>
-      <dd>{{vm.phone.connectivity.infrared | checkmark}}</dd>
+      <dd>{{phoneDetail.phone.connectivity.infrared | checkmark}}</dd>
       <dt>GPS</dt>
-      <dd>{{vm.phone.connectivity.gps | checkmark}}</dd>
+      <dd>{{phoneDetail.phone.connectivity.gps | checkmark}}</dd>
     </dl>
   </li>
   <li>
     <span>Android</span>
     <dl>
       <dt>OS Version</dt>
-      <dd>{{vm.phone.android.os}}</dd>
+      <dd>{{phoneDetail.phone.android.os}}</dd>
       <dt>UI</dt>
-      <dd>{{vm.phone.android.ui}}</dd>
+      <dd>{{phoneDetail.phone.android.ui}}</dd>
     </dl>
   </li>
   <li>
     <span>Size and Weight</span>
     <dl>
       <dt>Dimensions</dt>
-      <dd ng-repeat="dim in vm.phone.sizeAndWeight.dimensions">{{dim}}</dd>
+      <dd ng-repeat="dim in phoneDetail.phone.sizeAndWeight.dimensions">{{dim}}</dd>
       <dt>Weight</dt>
-      <dd>{{vm.phone.sizeAndWeight.weight}}</dd>
+      <dd>{{phoneDetail.phone.sizeAndWeight.weight}}</dd>
     </dl>
   </li>
   <li>
     <span>Display</span>
     <dl>
       <dt>Screen size</dt>
-      <dd>{{vm.phone.display.screenSize}}</dd>
+      <dd>{{phoneDetail.phone.display.screenSize}}</dd>
       <dt>Screen resolution</dt>
-      <dd>{{vm.phone.display.screenResolution}}</dd>
+      <dd>{{phoneDetail.phone.display.screenResolution}}</dd>
       <dt>Touch screen</dt>
-      <dd>{{vm.phone.display.touchScreen | checkmark}}</dd>
+      <dd>{{phoneDetail.phone.display.touchScreen | checkmark}}</dd>
     </dl>
   </li>
   <li>
     <span>Hardware</span>
     <dl>
       <dt>CPU</dt>
-      <dd>{{vm.phone.hardware.cpu}}</dd>
+      <dd>{{phoneDetail.phone.hardware.cpu}}</dd>
       <dt>USB</dt>
-      <dd>{{vm.phone.hardware.usb}}</dd>
+      <dd>{{phoneDetail.phone.hardware.usb}}</dd>
       <dt>Audio / headphone jack</dt>
-      <dd>{{vm.phone.hardware.audioJack}}</dd>
+      <dd>{{phoneDetail.phone.hardware.audioJack}}</dd>
       <dt>FM Radio</dt>
-      <dd>{{vm.phone.hardware.fmRadio | checkmark}}</dd>
+      <dd>{{phoneDetail.phone.hardware.fmRadio | checkmark}}</dd>
       <dt>Accelerometer</dt>
-      <dd>{{vm.phone.hardware.accelerometer | checkmark}}</dd>
+      <dd>{{phoneDetail.phone.hardware.accelerometer | checkmark}}</dd>
     </dl>
   </li>
   <li>
     <span>Camera</span>
     <dl>
       <dt>Primary</dt>
-      <dd>{{vm.phone.camera.primary}}</dd>
+      <dd>{{phoneDetail.phone.camera.primary}}</dd>
       <dt>Features</dt>
-      <dd>{{vm.phone.camera.features.join(', ')}}</dd>
+      <dd>{{phoneDetail.phone.camera.features.join(', ')}}</dd>
     </dl>
   </li>
   <li>
     <span>Additional Features</span>
-    <dd>{{vm.phone.additionalFeatures}}</dd>
+    <dd>{{phoneDetail.phone.additionalFeatures}}</dd>
   </li>
 </ul>
