step-13 style guide and feature folders
    - Organized code into modules by feature structure
    - Split code so that one component is introduced in each file
    - Switched to feature.type.js file naming scheme

--- a/app/index.html
+++ b/app/index.html
@@ -12,11 +12,17 @@
   <script src="bower_components/angular-animate/angular-animate.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/animations.js"></script>
-  <script src="js/components.js"></script>
-  <script src="js/filters.js"></script>
-  <script src="js/services.js"></script>
+  <script src="js/app.module.js"></script>
+  <script src="js/core/core.module.js"></script>
+  <script src="js/core/phone.factory.js"></script>
+  <script src="js/core/checkmark.filter.js"></script>
+  <script src="js/phone_list/phone_list.module.js"></script>
+  <script src="js/phone_list/phone_list.component.js"></script>
+  <script src="js/phone_list/phone_list.controller.js"></script>
+  <script src="js/phone_detail/phone_detail.module.js"></script>
+  <script src="js/phone_detail/phone_detail.component.js"></script>
+  <script src="js/phone_detail/phone_detail.controller.js"></script>
+  <script src="js/phone_detail/phone.animation.js"></script>
 </head>
 <body>
 
