--- a/app/index.html
+++ b/app/index.html
@@ -6,9 +6,13 @@
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="css/app.css">
   <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="js/app.js"></script>
   <script src="js/components.js"></script>
 </head>
 <body>
-  <phone-list></phone-list>
+
+  <div ng-view></div>
+
 </body>
 </html>
