--- a/app/index.html
+++ b/app/index.html
@@ -1,15 +1,39 @@
 <!doctype html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="phonecatApp">
 <head>
   <meta charset="utf-8">
-  <title>My HTML File</title>
+  <title>My HTML <File></File></title>
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="css/app.css">
   <script src="bower_components/angular/angular.js"></script>
+  <script src="js/controllers.js"></script>
 </head>
-<body>
 
-  <p>Nothing here {{'yet' + '!'}}</p>
+<body ng-controller = "PhoneListCtrl">
+
+  <div class = "container-fluid">
+    <div class = "row">
+      <div class = "col-md-2">
+        <!--Sidebar content-->
+
+        Search: <input ng-model = "query">
+
+      </div>
+      <div class = "col-md-10">
+        <!--Body content -->
+
+
+        <ul class = "phones">
+          <li ng-repeat = "phone in phones | filter:query ">
+            <span>{{phone.name}}</span>
+            <p>{{phone.snippet}}</p>
+          </li>
+        </ul>
+
+
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
