--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
   <script src="js/app.js"></script>
   <script src="js/animations.js"></script>
   <script src="js/controllers.js"></script>
+  <script src="js/directives.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/services.js"></script>
 </head>
