--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <script src="bower_components/angular/angular.js"></script>
   </head>
   <body>
-
+	<p>Total number of phones:<span style="color:red"> 2 </span></p>
     <ul>
       <li>
         <span>Nexus S</span>
