--- a/step-5/app/phone-list/phone-list.template.html
+++ b/step-5/app/phone-list/phone-list.template.html
@@ -13,6 +13,7 @@
         <li ng-repeat="phone in $ctrl.phones | filter:$ctrl.query">
           <span>{{phone.name}}</span>
           <p>{{phone.snippet}}</p>
+		  <p>{{$ctrl.query}}</p>
         </li>
       </ul>
 
