--- a/step-6/app/phone-list/phone-list.template.html
+++ b/step-6/app/phone-list/phone-list.template.html
@@ -12,7 +12,7 @@
         Sort by:
         <select ng-model="$ctrl.orderProp">
           <option value="name">Alphabetical</option>
-          <option value="age">Newest</option>
+          <option value="-age">oldest</option>
         </select>
       </p>
 
@@ -26,7 +26,7 @@
           <p>{{phone.snippet}}</p>
         </li>
       </ul>
-
+	<p>{{$ctrl.orderProp}}</p>
     </div>
   </div>
 </div>
