--- a/step-1/index.html
+++ b/step-1/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Google Phone Gallery</title>
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="app.css" />
-    <script src="bower_components/angular/angular.js"></script>
+    <script src="../bower_components/angular/angular.js"></script>
   </head>
   <body>
 	<p>Total number of phones:<span style="color:red"> 2</span></p>
