--- a/step-7/phone-list/phone-list1.template.html
+++ b/step-7/phone-list/phone-list1.template.html
@@ -25,6 +25,7 @@
           <p>{{phone.snippet}}</p>
         </li>
       </ul>
+	<pre>{{$ctrl.phones | filter:$ctrl.query | orderBy:$ctrl.orderProp | json}}</pre>
     </div>
   </div>
 </div>
