To show the selected image.

--- a/app/phone-detail/phone-detail.template.html
+++ b/app/phone-detail/phone-detail.template.html
@@ -1,5 +1,5 @@
 <div class="phone-images">
-  <img ng-src="{{img}}" class="phone"
+  <img ng-src="{{$ctrl.mainImageUrl}}" class="phone"
       ng-class="{selected: img === $ctrl.mainImageUrl}"
       ng-repeat="img in $ctrl.phone.images" />
 </div>
