First change nwe branch

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
     <script src="phone-detail/phone-detail.component.js"></script>
   </head>
   <body>
-
+      LUIS SUPO
     <div class="view-container">
       <div ng-view class="view-frame"></div>
     </div>
