feat(a11y): improve the accessibility of the project

--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
     <script src="core/phone/phone.module.js"></script>
     <script src="core/phone/phone.service.js"></script>
     <script src="phone-list/phone-list.module.js"></script>
+    <script src="phone-list/phone-list.directive.js"></script>
     <script src="phone-list/phone-list.component.js"></script>
     <script src="phone-detail/phone-detail.module.js"></script>
     <script src="phone-detail/phone-detail.component.js"></script>
