--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <link rel="stylesheet" href="app.css" />
   <link rel="stylesheet" href="app.animations.css" />
 
-  <script src="bower_components/jquery/dist/jquery.js"></script>
+  <!-- <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-animate/angular-animate.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
-  <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="app.module.ajs.js"></script>
+  <script src="bower_components/angular-route/angular-route.js"></script> -->
+  <!-- <script src="app.module.ajs.js"></script>
   <script src="app.config.js"></script>
   <script src="app.animations.js"></script>
   <script src="core/core.module.js"></script>
@@ -24,16 +24,16 @@
   <script src="phone-list/phone-list.module.js"></script>
   <script src="phone-list/phone-list.component.js"></script>
   <script src="phone-detail/phone-detail.module.js"></script>
-  <script src="phone-detail/phone-detail.component.js"></script>
+  <script src="phone-detail/phone-detail.component.js"></script> -->
 
-  <script src="/node_modules/core-js/client/shim.min.js"></script>
+  <!-- <script src="/node_modules/core-js/client/shim.min.js"></script>
   <script src="/node_modules/zone.js/dist/zone.js"></script>
   <script src="/node_modules/systemjs/dist/system.src.js"></script>
   <script src="/systemjs.config.js"></script>
   <script>
     System.import('/app');
 
-  </script>
+  </script> -->
 </head>
 
 <body>
