--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <!-- <base href="/app/"> -->
   <meta charset="utf-8">
   <title>Google Phone Gallery</title>
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+  <!-- <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
   <link rel="stylesheet" href="app.css" />
-  <link rel="stylesheet" href="app.animations.css" />
+  <link rel="stylesheet" href="app.animations.css" /> -->
 
   <!-- <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/angular/angular.js"></script>
