--- a/app/phone-list/phone-list.template.html
+++ b/app/phone-list/phone-list.template.html
@@ -5,7 +5,7 @@
 
       <p>
         Search:
-        <input ng-model="$ctrl.query" />
+        <input [(ngModel)]="query" />
       </p>
 
       <p>
@@ -21,12 +21,11 @@
       <!--Body content-->
 
       <ul class="phones">
-        <li ng-repeat="phone in $ctrl.phones | filter:$ctrl.query | orderBy:$ctrl.orderProp"
-            class="thumbnail phone-list-item">
-          <a href="#!/phones/{{phone.id}}" class="thumb">
-            <img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}" />
-          </a>
-          <a href="#!/phones/{{phone.id}}">{{phone.name}}</a>
+        <li *ngFor="let phone of getPhones()" class="thumbnail phone-list-item">
+          <a href="/#!/phones/{{phone.id}}" class="thumb">
+          <img [src]="phone.imageUrl" [alt]="phone.name" />
+        </a>
+          <a href="/#!/phones/{{phone.id}}" class="name">{{phone.name}}</a>
           <p>{{phone.snippet}}</p>
         </li>
       </ul>
