--- a/app/pages/home.html
+++ b/app/pages/home.html
@@ -1,5 +1,22 @@
-<h2>Home</h2>
-
-Use the Brackets tab to view a list of your brackets
-
-Use the Search tab to find other brackets
+<table summary="Tournament Bracket" class="bracket">
+    <tr>
+        <th>National Semi-Finals<br>Saturday November 8th</th>
+        <th>National Championship<br>Sunday November 9th</th>
+        <th>NJCAA National Champion</th>
+    </tr>
+    <tr>
+        <td><p>#1 Manchester CC (17-2-1)</p></td>
+        <td rowspan="2"><p></p></td>
+        <td rowspan="4"><p></p></td>
+    </tr>
+    <tr>
+        <td><p>#4 Triton College (13-4-0)</p></td>
+    </tr>
+    <tr>
+        <td><p>#2 Herkimer County CC (18-3-0)</p></td>
+        <td rowspan="2"><p></p></td>
+    </tr>
+    <tr>
+        <td><p>#3 County College of Morris (17-3-0)</p></td>
+    </tr>
+</table>
