--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>brackCRACK</title>
 
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
@@ -16,12 +16,14 @@
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angularfire/dist/angularfire.js"></script>
+    <script src="bower_components/angular-smart-table/dist/smart-table.min.js"></script>
 
     <script src="js/brackets.min.js"></script>
 
     <script src="app.js"></script>
 
     <script src="services/auth.service.js"></script>
+    <script src="services/data.service.js"></script>
 
     <script src="components/nav-bar/nav-bar.component.js"></script>
     <script src="components/bracket/bracket.component.js"></script>
