--- a/app/index.html
+++ b/app/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="app.css" />
     <script src="lib/angular/angular.js"></script>
-    <script src="app.js"></script>
-    <script src="phone-list.component.js"></script>
+    <script src="app.js"></script> <!-- Although app.js is now super lean.... --->
+    <script src="phone-list.component.js"></script> <!-- ... now have to load this separately. But not so bad really -->
   </head>
   <body>
 
     <!-- Use a custom component to render a list of phones -->
-    <phone-list></phone-list>
+    <phone-and-fruit-list></phone-and-fruit-list> <!-- Noice! -->
 
   </body>
 </html>
