:sparkles: step-1 Static Template

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,22 @@
 </head>
 <body>
 
-<p>1 + 2 = {{1 + 2}}</p>
+  <ul>
+    <li>
+      <span>Nexus S</span>
+      <p>
+        Fast just got faster with Nexus S.
+      </p>
+    </li>
+    <li>
+      <span>Motorola XOOM™ with Wi-Fi</span>
+      <p>
+        The Next, Next Generation tablet.
+      </p>
+    </li>
+  </ul>
+
+  <p>Total number of phones: 2</p>
 
 </body>
 </html>
