:sparkles: step-2 AngularJS Templates

--- a/app/index.html
+++ b/app/index.html
@@ -1,29 +1,29 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="phonecatApp">
 <head>
   <meta charset="utf-8">
   <title>My HTML File</title>
   <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
   <script src="lib/angular/angular.js"></script>
+  <script src="app.js"></script>
 </head>
-<body>
+<body ng-controller="PhoneListController">
+
+  <p>Hello, {{name}}!</p>
 
   <ul>
-    <li>
-      <span>Nexus S</span>
-      <p>
-        Fast just got faster with Nexus S.
-      </p>
-    </li>
-    <li>
-      <span>Motorola XOOM™ with Wi-Fi</span>
-      <p>
-        The Next, Next Generation tablet.
-      </p>
+    <li ng-repeat="phone in phones">
+      <span>{{phone.name}}</span>
+      <p>{{phone.snippet}}</p>
     </li>
   </ul>
 
-  <p>Total number of phones: 2</p>
+  <p>Total number of phones: {{phones.length}}</p>
+
+  <table>
+    <tr><th>Row number</th></tr>
+    <tr ng-repeat="i in [0, 1, 2, 3, 4, 5, 6, 7]"><td>{{i+1}}</td></tr>
+  </table>
 
 </body>
 </html>
