:sparkles: step-3 Components

--- a/app/index.html
+++ b/app/index.html
@@ -6,19 +6,13 @@
   <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
   <script src="lib/angular/angular.js"></script>
   <script src="app.js"></script>
+  <script src="phone-list.component.js"></script>
 </head>
 <body ng-controller="PhoneListController">
 
   <p>Hello, {{name}}!</p>
 
-  <ul>
-    <li ng-repeat="phone in phones">
-      <span>{{phone.name}}</span>
-      <p>{{phone.snippet}}</p>
-    </li>
-  </ul>
-
-  <p>Total number of phones: {{phones.length}}</p>
+  <phone-list></phone-list>
 
   <table>
     <tr><th>Row number</th></tr>
